--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	<!-- p tag -->
     <p id = "user">Enter a Guessed Number </p>
     <input id= "guess"></input><br><br>
-	<button>Check</button>
+	<button class="checking">Check</button>
     <!-- p tag -->
     <p id = "respond"></p>  <!-- This is the respone (Hot or Cold) -->
     <script type="text/javascript" src="./script.js">  <!-- Write the logic in script.js -->
